Fixed toolbar and navbar overlapping

--- a/starterkit/styles/css/components.css
+++ b/starterkit/styles/css/components.css
@@ -842,7 +842,7 @@ ul.primary a.is-active {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 
 body.toolbar-fixed.toolbar-tray-open.toolbar-vertical {
