--- a/styles/scss/components/fixed-navbar.scss
+++ b/styles/scss/components/fixed-navbar.scss
@@ -4,7 +4,7 @@
 
 .row-navbar--fixed {
   position: fixed;
-  top: 0;
+  top: 39px;
   width: 100%;
   z-index: 1;
 }
